Fixes #24 Fix long words overflowing out of container

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,6 +132,7 @@ select {
 
 .pane p {
     padding: 1em;
+    overflow-wrap: break-word;
 }
 
 .pane h3 {
